Fixed bug that broke Panel by Panel when running on PHP 8 server. Fixed bug that covered the comic with the loading anim when JavaScript was disabled. Fixed extra forward slashes in the URL when navigating with JavaScript disabled.

--- a/pbp/style.css
+++ b/pbp/style.css
@@ -43,7 +43,7 @@ a {
 
 #loadingcontainer {
     z-index: 4;
-    display: flex;
+    display: none;
     justify-content: center;
     align-items: center;
     background: black;
